--- a/index=2.html
+++ b/index=2.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="task2.css">
 </head>
 <body>
-    <div class="img">
+    <div class="container">
 
-    <img src="738f7354a0c85808352b4b1254c8071f.jpg">
-    <img src="2638c0968866d5f59408a9c22d79ecb7.jpg">
-    <img src="9250777ab552037308afea15cf2e2f58.jpg">
-    <img src="a4e6b76a678e6f3a64581819a0a94d7e.jpg">
-    <img src="ae4507f5dcb267fe7aaabc7160c16d2e.jpg">
-    <img src="d9ec9af8a58c32b3923da2ec0f2503e5.jpg">
-    <img src="fccdd2c19e073d4552b3e3ec3f057b2c.jpg">
+    <img class="ss" src="738f7354a0c85808352b4b1254c8071f.jpg">
+    <img class="ss" src="2638c0968866d5f59408a9c22d79ecb7.jpg">
+    <img class="ss" src="9250777ab552037308afea15cf2e2f58.jpg">
+    <img class="ss" src="a4e6b76a678e6f3a64581819a0a94d7e.jpg">
+    <img class="ss" src="ae4507f5dcb267fe7aaabc7160c16d2e.jpg">
+    <img class="ss"src="d9ec9af8a58c32b3923da2ec0f2503e5.jpg">
+    <img class="ss"src="fccdd2c19e073d4552b3e3ec3f057b2c.jpg">
     </div>
 </body>
 </html>
