--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="task1.css">
 </head>
 <body>
-    <div class="container"> <div class="p1">
+    <div class="container"> 
+        <div class="p1">
 
         <h3>A short heading </h3>
         <img src="OIP.jpeg"></img>
